--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bootstrap": "^5.2.0",
     "clipboard-copy": "^4.0.1",
+    "lottie-react": "^2.3.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
