--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "recipes-app-test",
+  "homepage": "https://viniciusrogatti.github.io/project-recipes-app",
   "version": "1.0.0",
   "private": true,
   "engines": {
@@ -8,6 +9,7 @@
   "dependencies": {
     "bootstrap": "^5.2.0",
     "clipboard-copy": "^4.0.1",
+    "gh-pages": "^4.0.0",
     "lottie-react": "^2.3.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
@@ -19,6 +21,8 @@
     "styled-components": "^5.3.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "cy": "env CY_CLI=true cypress run",
     "cy:open": "cypress open --e2e --browser chrome",
     "start": "env ESLINT_NO_DEV_ERRORS=true react-scripts start",
